Material Design: Color Theming: began work on fragment_profile.xml, login and register, home

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    android:backgroundTint="@color/black"
+    android:backgroundTint="@color/colorBlack"
     tools:context=".ui.fragments.Login">
 
     <EditText
@@ -18,8 +18,8 @@
         android:hint="enter email here"
         android:inputType="textEmailAddress"
         android:textAlignment="center"
-        android:textColor="#EAE4E4"
-        android:textColorHint="#94FFFFFF"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorBigText"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,8 +33,8 @@
         android:hint="enter password here"
         android:inputType="textPassword"
         android:textAlignment="center"
-        android:textColor="#D3F8F6F6"
-        android:textColorHint="#94FFFFFF"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorSecondaryText"
         android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,7 +76,7 @@
         android:layout_width="133dp"
         android:layout_height="62dp"
         android:layout_marginBottom="80dp"
-        android:background="@color/light_blue_900"
+        android:background="@color/colorSecondaryText"
         android:backgroundTint="@color/light_blue_900"
         android:backgroundTintMode="src_over"
         android:text="Login"
