--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -111,7 +111,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="wrap_content"
         android:layout_below="@+id/post_footer_layout"
         android:layout_marginStart="15dp"
-        android:textColor="@color/black"
+        android:textColor="@color/colorBlack"
         android:textSize="13sp"
         android:textStyle="bold" />
 
@@ -124,7 +124,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_marginEnd="10dp"
     android:layout_marginTop="5dp"
     android:textSize="13sp"
-    android:textColor="@color/black"/>
+    android:textColor="@color/colorBlack"/>
 
     <RelativeLayout
         android:id="@+id/comments_latout"
@@ -145,7 +145,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_marginBottom="11dp"
             android:background="@null"
             android:hint="Add a comment..."
-            android:textColor="@color/black"
+            android:textColor="@color/colorBlack"
             android:textSize="13sp"
             tools:ignore="TouchTargetSizeCheck" />
 
