Styling: Lowered Black and White Contrast

--- a/app/src/main/res/layout/fragment_edit_profile_text.xml
+++ b/app/src/main/res/layout/fragment_edit_profile_text.xml
@@ -13,7 +13,10 @@
         android:layout_height="121dp"
         android:ems="10"
         android:gravity="start|top"
+        android:hint="click here to edit"
         android:inputType="textMultiLine"
+        android:textAlignment="center"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
