--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -48,6 +48,7 @@
         android:layout_width="133dp"
         android:layout_height="46dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="casual"
         android:text="Forgot Password?"
         android:textAlignment="center"
         android:textColor="#F4EFEF"
@@ -62,6 +63,7 @@
         android:layout_width="133dp"
         android:layout_height="45dp"
         android:layout_marginTop="4dp"
+        android:fontFamily="casual"
         android:text="Need Account?"
         android:textAlignment="center"
         android:textColor="#F6F2F2"
@@ -79,7 +81,9 @@
         android:background="@color/colorSecondaryText"
         android:backgroundTint="@color/colorPrimary"
         android:backgroundTintMode="src_over"
+        android:fontFamily="monospace"
         android:text="Login"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.525"
