--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -15,6 +15,7 @@
         android:layout_height="106dp"
         android:layout_marginTop="224dp"
         android:ems="10"
+        android:fontFamily="monospace"
         android:hint="enter email here"
         android:inputType="textEmailAddress"
         android:textAlignment="center"
@@ -30,6 +31,7 @@
         android:layout_width="265dp"
         android:layout_height="111dp"
         android:ems="10"
+        android:fontFamily="monospace"
         android:hint="enter password here"
         android:inputType="textPassword"
         android:textAlignment="center"
