Styling: Splash (colors, fonts)

--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -13,7 +13,10 @@
         android:layout_width="124dp"
         android:layout_height="52dp"
         android:layout_marginTop="432dp"
+        android:fontFamily="monospace"
         android:text="Login"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.535"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +27,10 @@
         android:layout_width="124dp"
         android:layout_height="53dp"
         android:layout_marginTop="64dp"
+        android:fontFamily="monospace"
         android:text="Register"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.536"
         app:layout_constraintStart_toStartOf="parent"
