--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorAccent">#2196F3</color>
     <color name="colorBigText">#2196F3</color>
     <color name="colorSmallText">#060F40</color>
-    <color name="colorSecondaryText">#8B68C8</color>
+    <color name="colorSecondaryText">#060F40</color>
     <color name="colorBlack">#050609</color>
     <color name="colorWhite">#EFEFEF</color>
 </resources>
