Styling: profile_item.xml (colors, fonts)

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -174,9 +174,8 @@
         android:layout_height="49dp"
         android:layout_marginTop="16dp"
         android:clickable="true"
-        android:foregroundTint="#4A2222"
         android:src="@drawable/outline_logout_black_24dp"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/colorSecondaryText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.958"
