--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -5,6 +5,8 @@
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
     android:layout_marginBottom="16dp"
+    android:background="@color/colorPrimary"
+    app:cardBackgroundColor="@color/colorPrimary"
     app:cardCornerRadius="8dp"
     app:cardElevation="5dp"
     app:cardPreventCornerOverlap="true"
@@ -13,6 +15,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="124dp"
+        android:background="@color/colorPrimary"
         android:padding="8dp">
 
         <ImageView
@@ -21,6 +24,7 @@
             android:layout_height="80dp"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
+            android:background="@color/colorBlack"
             android:contentDescription="@string/todo"
             android:src="@drawable/techiehumor" />
 
@@ -33,8 +37,11 @@
             android:layout_marginStart="33dp"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="1dp"
+            android:fontFamily="casual"
             android:gravity="center"
             android:text="Title Text"
+            android:textColor="@color/colorWhite"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
     </RelativeLayout>
