--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -21,6 +21,7 @@
         android:textAlignment="center"
         android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorBigText"
+        android:textSize="16sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,8 +37,8 @@
         android:inputType="textPassword"
         android:textAlignment="center"
         android:textColor="@color/colorWhite"
-        android:textColorHint="@color/colorSecondaryText"
-        android:textSize="18sp"
+        android:textColorHint="@color/colorAccent"
+        android:textSize="16sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
