--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.fragments.NewPost">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView_upload_gif"
         android:layout_width="269dp"
         android:layout_height="259dp"
         android:layout_marginTop="64dp"
@@ -26,7 +26,7 @@
         android:text="Select Media"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView_upload_gif" />
 
     <EditText
         android:id="@+id/add_caption"
