--- a/app/src/main/res/navigation/login_nav.xml
+++ b/app/src/main/res/navigation/login_nav.xml
@@ -134,6 +134,9 @@
         <action
             android:id="@+id/action_newPost3_to_dashboard3"
             app:destination="@id/dashboard3" />
+        <action
+            android:id="@+id/action_newPost3_to_homepage"
+            app:destination="@id/homepage" />
     </fragment>
     <fragment
         android:id="@+id/likes2"
