--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login_button_splash" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/splashlogo"
         android:layout_width="264dp"
         android:layout_height="266dp"
         android:layout_marginTop="116dp"
