--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -94,12 +94,13 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="192dp"
-        android:layout_height="179dp"
+        android:layout_width="233dp"
+        android:layout_height="185dp"
         android:layout_marginTop="24dp"
         android:src="@drawable/techbooklogo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.538"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/techbooklogo_removebg_preview" />
 </androidx.constraintlayout.widget.ConstraintLayout>
