--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -144,6 +144,7 @@
         android:text="Contact"
         android:textColorLink="@color/colorPrimary"
         android:textStyle="bold"
+        app:cornerRadius="8dp"
         app:layout_constraintBottom_toTopOf="@+id/profiletext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.055"
