--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
+    android:backgroundTint="@color/colorBlack"
     tools:context=".ui.fragments.Splash">
 
     <Button
@@ -13,8 +14,11 @@
         android:layout_width="124dp"
         android:layout_height="52dp"
         android:layout_marginTop="432dp"
+        android:background="@color/colorAccent"
+        android:elevation="20dp"
         android:fontFamily="monospace"
         android:text="Login"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,10 +31,13 @@
         android:layout_width="124dp"
         android:layout_height="53dp"
         android:layout_marginTop="64dp"
+        android:background="@color/colorAccent"
         android:fontFamily="monospace"
         android:text="Register"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:cornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.536"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,6 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.557"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/techbooklogo_removebg_preview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
