--- a/app/src/main/res/layout/fragment_event_search.xml
+++ b/app/src/main/res/layout/fragment_event_search.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout7"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.Dashboard">
+    tools:context=".ui.fragments.EventSearch">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/posts_view"
